# PolyCLI

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  readme.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: watchlists.example.yaml  watchlists.yaml
config/prompts/: prompt-example.md
src/polymarket_cli/: config.py  main.py  mcp_server.py
src/polymarket_cli/clients/: data_api.py  gamma.py
src/polymarket_cli/domain/: models.py
src/polymarket_cli/llm/: base.py  ollama.py  openrouter.py
src/polymarket_cli/repl/: app.py  commands.py  completions.py  renderer.py
src/polymarket_cli/services/: discovery.py  launchd.py  paper_broker.py  ranking.py  scheduler.py
src/polymarket_cli/storage/: csv_store.py  sqlite.py
src/polymarket_cli/streams/: polymarket_ws.py
tests/: test_cli_smoke.py  test_config_and_models.py  test_gamma_client.py  test_paper_broker.py  test_ranking.py  test_repl_commands.py  test_repl_completions.py  test_tui_app.py  test_watchlists_cli.py  test_ws_streams.py
