[project]
name = "polycli"
version = "0.1.0"
description = "Investigative observatory for Polymarket. Discover, rank with LLMs, simulate, and stream live markets."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "bobbinetor" }]
keywords = ["polymarket", "prediction-markets", "cli", "trading", "crypto", "llm", "analysis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.urls]
Homepage = "https://github.com/bobbinetor/polycli"
Repository = "https://github.com/bobbinetor/polycli.git"
Issues = "https://github.com/bobbinetor/polycli/issues"
dependencies = [
    "anyio>=4.9.0",
    "httpx>=0.28.1",
    "polars>=1.29.0",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "pyyaml>=6.0.2",
    "prompt-toolkit>=3.0.50",
    "rich>=14.0.0",
    "typer>=0.15.3",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "respx>=0.22.0",
    "ruff>=0.11.10",
]

[project.scripts]
polycli = "polymarket_cli.main:app"

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polymarket_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
